<resources>
    <string name="app_name">Code</string>
    <string name="enter_name">Enter Name</string>
    <string name="add">ADD</string>
    <string name="print_names">PRINT NAMES</string>
    <string name="clear">Clear</string>
    <string name="student">Student</string>
    <string name="musician">Musician</string>
    <string name="teacher">Teacher</string>
    <string name="cat">Cat</string>
</resources>