<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/page_margin"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtTxtPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/personGroupId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:selectionRequired="true"
            app:singleSelection="true"
            app:checkedChip="@id/chipStudentId">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipStudentId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMusicianId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/musician"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTeacherId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAnimalId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPrintNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/print_names" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClearNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear" />


</LinearLayout>